<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Kernel Profiler</string>

    <string name="about">About</string>
    <string name="app_about">About App</string>
    <string name="app_name_summary">The easiest way to manage your kernel settings</string>
    <string name="apply_question">Apply %s?</string>
    <string name="applying_profile">Applying %s!</string>
    <string name="cancel">Cancel</string>
    <string name="change_logs">Change-logs</string>
    <string name="copyright" translatable="false">&#169;SmartPack Projects</string>
    <string name="create_config">Create Configuration</string>
    <string name="create_profile">Create a Profile</string>
    <string name="create_profile_message">\'%s\' is created at</string>
    <string name="credits">Credits</string>
    <string name="credits_summary"><b><i>Grarak</i></b>: KernelAdiutor (Code base)\n<b><i>topjohnwu</i></b>: libsu\n<b><i>Lennoard Silva</i></b>: Code Contributions, App Icon, &amp; Portuguese (Brazilian) Translation\n<b><i>tsiflimagas</i></b>: Greek translations\n<b><i>SmgKhOaRn</i></b>: Korean translations\n<b><i>Hafitz Setya</i></b>: Indonesian translations</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_auto">Auto</string>
    <string name="dark_theme_disable">Disable</string>
    <string name="dark_theme_enable">Enable</string>
    <string name="data_lose_warning">The changes you made on this page will be lost! Are you sure?</string>
    <string name="description">Description</string>
    <string name="description_summary">Add a short description about your kernel here (single line)!</string>
    <string name="description_unknown">Description for this profile is not provided by the developer.</string>
    <string name="default_profile">Default Profile (Mandatory)</string>
    <string name="default_profile_summary">Specify default profile name (including \'.sh\' extension) here!</string>
    <string name="developed_by">Developed By</string>
    <string name="developer_credits">Developer Credits</string>
    <string name="developer_credits_summary">Add credits text to be shown in the app as copyright!</string>
    <string name="dismiss">Dismiss</string>
    <string name="documentation">Documentation</string>
    <string name="donations">Donations</string>
    <string name="donation_app">Buy Donation App</string>
    <string name="donations_summary">Add donation link here!</string>
    <string name="edit_config">Edit Configuration</string>
    <string name="edit_config_message">Please Note: Your current configuration file will be overwritten! Are you sure?</string>
    <string name="edit_config_saved">Configuration file is updated! The changes will be applied on next app launch.</string>
    <string name="failed_message">Unfortunately, \'%s\' is NOT a supported string! Please try another one!</string>
    <string name="kernel_about">About Kernel</string>
    <string name="kernel_support">How to add support in kernel?</string>
    <string name="kernel_support_summary">Kernel Profiler expects a configuration file (<b><i>kernelprofiler.json</i></b>) and one or more \'<b><i>profiles</i></b>\' (basically shell scripts) in certain specific structure placed inside <b>\'<i>/data/kernel_profiler</i>\'</b>. Please check \'<b>Settings  -> Developer Tools</b>\' for more information.</string>
    <string name="language">Language (%s)</string>
    <string name="language_el" translatable="false">Ελληνικά</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_default">Default</string>
    <string name="language_ko" translatable="false">한국어</string>
    <string name="language_in" translatable="false">bahasa Indonesia</string>
    <string name="language_pt" translatable="false">Português</string>
    <string name="more_apps">More from Developer</string>
    <string name="name_empty">Profile name shouldn\'t be empty! Aborting.</string>
    <string name="no_internet">Please check your internet connection!</string>
    <string name="no_root">No Root</string>
    <string name="no_root_message"><b>Why this issue happened?</b>\n\nYour device is either not rooted, or the root permission is declined for Kernel Profiler by you!\n\n\n<b>Why root permission needed?</b>\n\nIn order to execute, or apply a kernel profile on boot, Kernel Profiler needs superuser permissions, and is impossible on a device without root access!\n\n\n<b>How can I root my device?</b>\n\nA simple google search will help to find many guides to achieve root on your device. Please have a look at it!\n\n\n<b>Is rooting a device safe?</b>\n\nRooting poses some security risk, but it\'s generally safe to do!</string>
    <string name="ok">OK</string>
    <string name="on_boot">Applying Settings…</string>
    <string name="on_boot_conformation">%s is already assigned as the default profile!</string>
    <string name="on_boot_message">%s is set as the default profile!</string>
    <string name="on_boot_summary">Applying On-Boot Settings (%s)!</string>
    <string name="press_back">Press back again to exit</string>
    <string name="profile_applied_success">\'%s\' applied successfully!</string>
    <string name="profile_description">Profile Description</string>
    <string name="profile_description_empty">Adding a short description for this profile is highly recommended!</string>
    <string name="profile_description_summary">Add description here!</string>
    <string name="profile_details">Profile Details</string>
    <string name="profile_details_empty">Profile Details shouldn\'t be empty! Aborting.</string>
    <string name="profile_details_summary">Add details (only commands) here!</string>
    <string name="profile_exists">%s already exists! Please use a different name.</string>
    <string name="report_issue">Report an Issue</string>
    <string name="save_config_title">Are you sure to save this configuration?</string>
    <string name="save_config_message">Please note: The new configuration file will be saved as \'%s\'!</string>
    <string name="save_config_warning">Please note: \'%s\' will be overwritten. Please be sure to make a backup if necessary!</string>
    <string name="share">Share</string>
    <string name="share_message">Kernel Profiler is a profile based kernel management utility, which allows kernel developers to provide predefined profiles to their users.\n\nThe latest version of Kernel Profiler can be obtained from https://play.google.com/store/apps/details?id=com.smartpack.kernelprofiler\n\nTo know more about integrating Kernel Profiler support into a kernel, please visit https://github.com/SmartPack/KernelProfiler/wiki</string>
    <string name="source_code">Source Code</string>
    <string name="storage_access_denied">Permission denied for writing to storage!</string>
    <string name="support">Support</string>
    <string name="support_developer">Support Developer!</string>
    <string name="support_developer_message">If you like to appreciate my work, please consider buying SmartPack Donation Package from PlayStore as it is really helpful to continue my projects more active, although it is not at all necessary.</string>
    <string name="support_summary">Add a link to the support page here!</string>
    <string name="success_message">Congrats! \'%s\' is a supported string!</string>
    <string name="test">Test</string>
    <string name="testing">Testing profile… Please be patient!</string>
    <string name="testing_success">"Testing profile completed successfully!"</string>
    <string name="title">Title (Mandatory)</string>
    <string name="title_check">Do this test only if you\'re preparing a configuration file for the current kernel!</string>
    <string name="title_empty_message">Title shouldn\'t be empty! Aborting.</string>
    <string name="title_summary">Add your title here! (Important: Title should contain a matching word from \'uname -a\'. Click the button next to this text for checking!)</string>
    <string name="tools_developer">Developer Tools</string>
    <string name="unsupported">No Kernel Support</string>
    <string name="unsupported_help_message">Please Note: This app is also equipped with necessary tools to create its support files. Please check \'Settings  -> Developer Tools\' for more information.</string>
    <string name="unsupported_message">Please ask your favourite kernel developer to add support to this app!</string>
    <string name="unsupported_reason">Why this issue happened?</string>
    <string name="unsupported_solution">How to solve this issue?</string>
    <string name="unsupported_summary">It seems like your kernel doesn\'t have the necessary configuration file/profiles to support this app.</string>
    <string name="wrong_profile">%s is not a proper profile file! Aborting.</string>
    <string name="yes">Yes</string>
</resources>