<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?android:attr/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/colorAccent"
        android:gravity="end|center_vertical">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_gravity="start"
            android:src="@drawable/ic_back"
            android:background="?android:attr/colorAccent"
            android:tint="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/save_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_gravity="end"
            android:src="@drawable/ic_save"
            android:background="?android:attr/colorAccent"
            android:tint="@color/black"/>
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:baselineAligned="false" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="start"
                android:text="@string/title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:padding="5dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/config_title_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:gravity="center|start"
                    android:textColor="?android:attr/colorAccent"
                    android:textColorHint="?android:attr/colorAccent"
                    android:hint="@string/title_summary"
                    android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                    android:padding="10dp"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/check_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="end|center"
                    android:src="@drawable/ic_check"
                    android:background="@null"
                    android:tint="?android:attr/colorAccent"/>
            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="start"
                android:text="@string/description"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:padding="5dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/config_description_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="center|start"
                android:hint="@string/description_summary"
                android:textColor="?android:attr/colorAccent"
                android:textColorHint="?android:attr/colorAccent"
                android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                android:padding="10dp"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="start"
                android:text="@string/default_profile"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:padding="5dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/default_profile_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="center|start"
                android:hint="@string/default_profile_summary"
                android:textColor="?android:attr/colorAccent"
                android:textColorHint="?android:attr/colorAccent"
                android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                android:padding="10dp"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="start"
                android:text="@string/developer_credits"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:padding="5dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/developer_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="center|start"
                android:hint="@string/developer_credits_summary"
                android:textColor="?android:attr/colorAccent"
                android:textColorHint="?android:attr/colorAccent"
                android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                android:padding="10dp"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="start"
                android:text="@string/support"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:padding="5dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/support_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="center|start"
                android:hint="@string/support_summary"
                android:textColor="?android:attr/colorAccent"
                android:textColorHint="?android:attr/colorAccent"
                android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                android:padding="10dp"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="start"
                android:text="@string/donations"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:padding="5dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/donations_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="center|start"
                android:hint="@string/donations_summary"
                android:textColor="?android:attr/colorAccent"
                android:textColorHint="?android:attr/colorAccent"
                android:inputType="textMultiLine|textImeMultiLine|textNoSuggestions"
                android:padding="10dp"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>