<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground"
        android:layout_gravity="start"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/black"
            android:baselineAligned="false">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/black"
                android:tint="?android:attr/colorAccent"
                android:gravity="start|center_vertical"
                android:src="@drawable/ic_back" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/about"
                android:gravity="start|center_vertical"
                android:textColor="?android:attr/colorAccent"
                android:textIsSelectable="true"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_gravity="center" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/app_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="?android:attr/colorAccent"/>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50sp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical" >

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name_summary"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textIsSelectable="true"
                        android:textSize="15sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="@string/kernel_support"
                        android:textColor="?android:attr/colorAccent"
                        android:textIsSelectable="true"
                        android:textSize="18sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="center_horizontal"
                        android:text="@string/kernel_support_summary"
                        android:textStyle="normal"
                        android:lineSpacingExtra="5dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textIsSelectable="true"
                        android:textSize="15sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="@string/developed_by"
                        android:textColor="?android:attr/colorAccent"
                        android:textIsSelectable="true"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/developer"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_developer"
                        android:layout_gravity="center" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="@string/credits"
                        android:textColor="?android:attr/colorAccent"
                        android:textIsSelectable="true"
                        android:textSize="18sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="center_horizontal"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/credits_summary"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textIsSelectable="true"
                        android:textSize="15sp" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:text="@string/change_logs"
                            android:textColor="?android:attr/colorAccent"
                            android:textIsSelectable="true"
                            android:textSize="18sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/change_log"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:layout_marginTop="15dp"
                            android:gravity="start"
                            android:lineSpacingExtra="5dp"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textIsSelectable="true"
                            android:textSize="15sp" />
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:background="@color/black"
        android:textColor="?android:attr/colorAccent"
        android:textSize="18sp"
        android:padding="10dp" />
</com.google.android.material.card.MaterialCardView>